# workboard

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  PRD.md  README.md  commitlint.config.js  eslint.config.mjs  nx.json  package-lock.json  package.json  tsconfig.base.json  vitest.workspace.ts
.github/workflows/: ci.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
apps/backend/: .env.example  docker-compose.yml  package.json  project.json  tsconfig.app.json  tsconfig.spec.json  vitest.config.ts
apps/frontend/: .env.example  index.html  package.json  project.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  vercel.json  vite.config.ts  vitest.config.ts
apps/frontend-e2e/: package.json  playwright.config.ts  project.json  tsconfig.json
apps/frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/frontend/src-tauri/capabilities/: default.json
apps/frontend/src-tauri/src/: lib.rs  main.rs
apps/infra/: cdk.json  package.json  project.json  tsconfig.app.json  tsconfig.spec.json  vitest.config.ts
libs/shared/: package.json  project.json  tsconfig.lib.json  tsconfig.lib.tsbuildinfo  vitest.config.ts
specs/001-project-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-authentication/: data-model.md  plan.md  quickstart.md  research.md  (+2 more)
tools/: project.json  vitest.config.ts
(+219 files in other folders)
